fixed mobile hover bugs, and implemented change color on mobile touch. Other small styling adjustments

--- a/myapp/static/myapp/css/all.css
+++ b/myapp/static/myapp/css/all.css
@@ -1,4 +1,11 @@
 
+window::-webkit-scrollbar-thumb {
+    background: yellow;
+    color: yellow;
+}
+  
+
+
 .overlay overlay_inner a:link {
   color: #999999;
 }
@@ -7,9 +14,6 @@
   color: #999999;
 }
 
-#links div:hover {
-  color: #FFFFFF;
-}
 
 .style2 {
   font-size: 14px;
@@ -114,18 +118,10 @@ a:link {
   //color: #cdb9b0;
   text-decoration: none;
 }
-.clickable:hover {
-  text-decoration: none;
-  color: #FFFFFF;
-}
 a:visited {
   text-decoration: none;
   color: #999999;
   //color: #cdb9b0;
-}
-a:hover {
-  text-decoration: none;
-  color: #FFFFFF;
 }
 
 .icons > a {
@@ -136,9 +132,6 @@ a:hover {
 }
 .icons > a:link {
   color: #444;
-}
-.icons > a:hover {
-  color: #FFFFFF;
 }
 svg {
   fill: #444;
@@ -153,9 +146,6 @@ svg {
   fill: #444;
 }
 
-svg:hover {
-  fill: #FFFFFF;
-}
 
 #links  {
     font-size: 0.8em;
@@ -210,17 +200,7 @@ svg:hover {
     display: none;
 }
 
-.topmenu:hover {
-  text-decoration: none;
-  color: #FFFFFF;
-  cursor: pointer;
-}
 
-.menu:hover {
-  text-decoration: none;
-  color: #FFFFFF;
-  cursor: pointer;
-}
 
 
 #overlay {
@@ -347,6 +327,37 @@ svg:hover {
 
   #links a {
     display: none;
+  }
+}
+
+/* all hover effects go in here, so they don't fire on mobile */
+@media(hover: hover) and (pointer: fine) {
+  #links div:hover {
+    color: #FFFFFF;
+  }
+  .clickable:hover {
+    text-decoration: none;
+    color: #FFFFFF;
+  }
+  a:hover {
+    text-decoration: none;
+    color: #FFFFFF;
+  }
+  .icons > a:hover {
+    color: #FFFFFF;
+  }
+  svg:hover {
+    fill: #FFFFFF;
+  }
+  .topmenu:hover {
+    text-decoration: none;
+    color: #FFFFFF;
+    cursor: pointer;
+  }
+  .menu:hover {
+    text-decoration: none;
+    color: #FFFFFF;
+    cursor: pointer;
   }
 }
 
