--- a/myapp/static/myapp/css/pricing.css
+++ b/myapp/static/myapp/css/pricing.css
@@ -12,27 +12,8 @@
 #email a {
   color: #B9A673;
 }
-#email a:hover {
-  color: #FFFFFF;
-}
 
 
-/* "a:" rules override defaults from all.cs for this page only */
-//a:link {
-//  color: #B9A673;
-//}
-//
-//a:visited {
-//  color: #B9A673;
-//}
-//a:hover {
-//  text-decoration: none;
-//  color: #FFFFFF;
-//}
-//
-//svg {
-//  fill: #B9A673;
-//}
 
 img {
   display: block;
@@ -73,7 +54,11 @@ h2 {
     margin-left: 4%;
     margin-right: 4%;
   }
+}
+
+/* all hover effects go in here, so they don't fire on mobile */
+@media(hover: hover) and (pointer: fine) {
   #email a:hover {
-    color: #B9A673;
+    color: #FFFFFF;
   }
 }
